--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<h1>Have you ever wished you had a place to provide anonymous feedback about HR issues to your employer? <br /></h1> 
 		<h3>Hootsworth is building a platform to provide employees with the answers and resources to create healthier workplaces.</h3>
 		<h4>Be the first to know when we’re ready to launch!</h4>
-		<div class="email-form"> Email Form… <!-- <iframe src="http://go.pardot.com/l/456042/2018-02-21/3b73gc" width="100%" height="250" type="text/html" frameborder="0" allowTransparency="true" style="border: 0"></iframe> --></div>
+		<div class="email-form"><!--  Email Form…  --><iframe src="http://go.pardot.com/l/456042/2018-02-21/3b73gc" width="100%" height="250" type="text/html" frameborder="0" allowTransparency="true" style="border: 0"></iframe></div>
 	</div>
 	<div class="team-img"> <img src="images/team.png"> </div>
  
