--- a/index.html
+++ b/index.html
@@ -24,24 +24,21 @@
   
 </style>
 
-	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-	<!--[if lt IE 9]>
-	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-
 </head>
+
 <body>
 
 
 <section id="teaser" class="slide">
-	<div><img src="images/hootsworth-logo.png"></div>
+	
 	 <div class="tease-content">
-		<h1>Have you ever wished you had a place to provide anonymous feedback about HR issues to your employer? <br /></h1> 
-		<h3>Hootsworth is building a platform to provide employees with the answers and resources to create healthier workplaces.</h3>
-		<h4>Be the first to know when we’re ready to launch!</h4>
+		<h1>Are you stuck in a <br><span style="color: #1c75bb;">toxic, hostile, unfair, biased, or unhealthy</span><br> workplace situation? <br /></h1> 
+		<div><img src="images/hw-logo.svg" style="width: 400px; margin-top: 40px;"></div>
+		<h3>Hootsworth can help&hellip; with personalized confidential guidance from workplace experts, plus video tutorials and practical resources.</h3>
+		<h4>Add your email for early access</h4>
 		<div class="email-form"><!--  Email Form…  --><iframe src="https://go.pardot.com/l/456042/2018-02-21/3b73gc" width="100%" height="250" type="text/html" frameborder="0" allowTransparency="true" style="border: 0"></iframe></div>
 	</div>
-	<div class="team-img"> <img src="images/team.png"> </div>
+<!-- 	<div class="team-img"> <img src="images/team.png"> </div> -->
  
 </section>
 
