--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</li>
 						<li>
 							<form class="navbar-form navbar-left" role="search">
-								<a href="#sign-up"><button type="submit" class="btn btn-default">
+								<a href="#sign-up"><button type="submit" class="btn btn-default em-orange">
 									SIGN UP
 								</button></a>
 							</form>
@@ -71,7 +71,7 @@
 			</div>
 			<div class="col-md-5">
 				<h2>Introducing Hootsworth!</h2>
-				<p style="width: 80%">A personal HR adviser to help you navigate workplace situations.  Through Q&A, videos, and checklists, we help you solve your workplace problems.
+				<p>A personal HR adviser to help you navigate workplace situations.  Through Q&A, videos, and checklists, we help you solve your workplace problems.
 <br><br>
 We’ve assembled a dream team of workplace experts.</p>
 			</div>		
@@ -97,9 +97,9 @@ We’ve assembled a dream team of workplace experts.</p>
 			</div>
 			<div class="col-sm-5 col-md-6 col-lg-3 socials">
 				<ul>
-					<li><img src="images/fb-icon.png"></li>
-					<li><img src="images/tw-icon.png"></li>
-					<li><img src="images/in-icon.png"></li>
+					<li><a href="https://www.facebook.com/Emtrain/"><img src="images/fb-icon.png"></li></a>
+					<li><a href="https://twitter.com/emtrain"><img src="images/tw-icon.png"></li></a>
+					<li><a href="https://www.linkedin.com/company/emtrain/"><img src="images/in-icon.png"></li></a>
 				</ul>	
 			</div>
 		</div>
